[gd_scene load_steps=26 format=3 uid="uid://b7cn1kfdg3g1v"]

[ext_resource type="Script" path="res://coachinfo.gd" id="1_2fa8r"]
[ext_resource type="Texture2D" uid="uid://cyhty3vqh0qc2" path="res://faces/man (1).png" id="2_lqm8f"]
[ext_resource type="Texture2D" uid="uid://dlnmoc0ed866j" path="res://faces/man (2).png" id="3_ixvml"]
[ext_resource type="Texture2D" uid="uid://b5h5blrcpar86" path="res://faces/man (3).png" id="4_dohor"]
[ext_resource type="Texture2D" uid="uid://befr8mbdtne8t" path="res://faces/man (4).png" id="5_5mgtj"]
[ext_resource type="Texture2D" uid="uid://dpkbplwyqj6xc" path="res://faces/man (5).png" id="6_lnfo1"]
[ext_resource type="Texture2D" uid="uid://ckx2820j1c4r6" path="res://faces/man (6).png" id="7_w0fyj"]
[ext_resource type="Texture2D" uid="uid://cn4umisusfo8n" path="res://faces/businesswoman (1).png" id="8_oae23"]
[ext_resource type="Texture2D" uid="uid://dyi0kwo4srpv" path="res://faces/businesswoman.png" id="9_k7evo"]
[ext_resource type="Texture2D" uid="uid://cw5fudbgl47ij" path="res://faces/man (7).png" id="10_3j13v"]
[ext_resource type="Texture2D" uid="uid://qwgq3ikvutbl" path="res://faces/man (8).png" id="11_wafol"]
[ext_resource type="Texture2D" uid="uid://bg8ay80b0g0cj" path="res://faces/man (9).png" id="12_cnd7u"]
[ext_resource type="Texture2D" uid="uid://cg616vqwjdx6t" path="res://faces/man (10).png" id="13_pt83v"]
[ext_resource type="Texture2D" uid="uid://c7va68s2ayqri" path="res://faces/man (11).png" id="14_pr465"]
[ext_resource type="Texture2D" uid="uid://dp6gsvvxnse3j" path="res://faces/man (12).png" id="15_tlnsj"]
[ext_resource type="Texture2D" uid="uid://b1nufiuqu23m4" path="res://faces/man.png" id="16_v3rfr"]
[ext_resource type="Texture2D" uid="uid://ck2v3ld0rtbqh" path="res://faces/woman (1).png" id="17_q2rcx"]
[ext_resource type="Texture2D" uid="uid://ccm36sfhum7jp" path="res://faces/woman (2).png" id="18_njd3w"]
[ext_resource type="Texture2D" uid="uid://7odi1530d6h" path="res://faces/woman (3).png" id="19_ived0"]
[ext_resource type="Texture2D" uid="uid://cgk7vey3a8pvm" path="res://faces/woman (4).png" id="20_1gpkt"]
[ext_resource type="Texture2D" uid="uid://cxn8iunw5h6nv" path="res://faces/woman (5).png" id="21_y1n0j"]
[ext_resource type="Texture2D" uid="uid://c25hid2rybvvy" path="res://faces/woman.png" id="22_oa6g0"]
[ext_resource type="Texture2D" uid="uid://bu708ebhdn8oe" path="res://leftarrow.png" id="23_80jv4"]
[ext_resource type="Texture2D" uid="uid://c062qy1tueu6a" path="res://rightarrow.png" id="24_rrvjc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_55t0k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_lqm8f")
}, {
"duration": 1.0,
"texture": ExtResource("3_ixvml")
}, {
"duration": 1.0,
"texture": ExtResource("4_dohor")
}, {
"duration": 1.0,
"texture": ExtResource("5_5mgtj")
}, {
"duration": 1.0,
"texture": ExtResource("6_lnfo1")
}, {
"duration": 1.0,
"texture": ExtResource("7_w0fyj")
}, {
"duration": 1.0,
"texture": ExtResource("8_oae23")
}, {
"duration": 1.0,
"texture": ExtResource("9_k7evo")
}, {
"duration": 1.0,
"texture": ExtResource("10_3j13v")
}, {
"duration": 1.0,
"texture": ExtResource("11_wafol")
}, {
"duration": 1.0,
"texture": ExtResource("12_cnd7u")
}, {
"duration": 1.0,
"texture": ExtResource("13_pt83v")
}, {
"duration": 1.0,
"texture": ExtResource("14_pr465")
}, {
"duration": 1.0,
"texture": ExtResource("15_tlnsj")
}, {
"duration": 1.0,
"texture": ExtResource("16_v3rfr")
}, {
"duration": 1.0,
"texture": ExtResource("17_q2rcx")
}, {
"duration": 1.0,
"texture": ExtResource("18_njd3w")
}, {
"duration": 1.0,
"texture": ExtResource("19_ived0")
}, {
"duration": 1.0,
"texture": ExtResource("20_1gpkt")
}, {
"duration": 1.0,
"texture": ExtResource("21_y1n0j")
}, {
"duration": 1.0,
"texture": ExtResource("22_oa6g0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2fa8r")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -29.0
offset_top = -31.0
offset_right = 1183.0
offset_bottom = 675.0
color = Color(0.545098, 0.270588, 0.0745098, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 18.0
offset_right = 671.0
offset_bottom = 87.0
theme_override_font_sizes/font_size = 50
text = "Coach Information"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 102.0
offset_right = 671.0
offset_bottom = 171.0
theme_override_font_sizes/font_size = 40
text = "Name your coach:"

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 180.0
offset_right = 671.0
offset_bottom = 249.0
theme_override_font_sizes/font_size = 40
text = "Offensive Style:"

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 253.0
offset_right = 671.0
offset_bottom = 322.0
theme_override_font_sizes/font_size = 40
text = "Defensive Style:"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 460.0
offset_top = 109.0
offset_right = 825.0
offset_bottom = 159.0
theme_override_font_sizes/font_size = 30
placeholder_text = "John Doe"

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 420.0
offset_top = 186.0
offset_right = 465.0
offset_bottom = 206.0
theme_override_font_sizes/font_size = 30

[node name="OptionButton2" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 427.0
offset_top = 260.0
offset_right = 472.0
offset_bottom = 280.0
theme_override_font_sizes/font_size = 30

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 248.0
offset_top = 527.0
offset_right = 907.0
offset_bottom = 604.0
theme_override_font_sizes/font_size = 50
text = "Go to Coordinator Signings"

[node name="Label5" type="Label" parent="."]
layout_mode = 0
offset_left = 100.0
offset_top = 408.0
offset_right = 260.0
offset_bottom = 463.0
theme_override_font_sizes/font_size = 40
text = "Portrait:"

[node name="Portrait" type="AnimatedSprite2D" parent="."]
position = Vector2(518, 409)
scale = Vector2(0.365234, 0.365234)
sprite_frames = SubResource("SpriteFrames_55t0k")

[node name="PrevButton" type="Button" parent="."]
layout_mode = 0
offset_left = 282.0
offset_top = 408.0
offset_right = 415.0
offset_bottom = 471.0
theme_override_font_sizes/font_size = 40
text = "Prev"
icon = ExtResource("23_80jv4")

[node name="NextButton" type="Button" parent="."]
layout_mode = 0
offset_left = 616.0
offset_top = 408.0
offset_right = 755.0
offset_bottom = 471.0
theme_override_font_sizes/font_size = 40
text = "Next"
icon = ExtResource("24_rrvjc")
icon_alignment = 2

[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="item_selected" from="OptionButton2" to="." method="_on_option_button_2_item_selected"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PrevButton" to="." method="_on_prev_button_pressed"]
[connection signal="pressed" from="NextButton" to="." method="_on_next_button_pressed"]
